# study_suite

./: .dockerignore  .env.template  .gitignore  ArchiteturePlanning.md  Dockerfile.backend  Dockerfile.telegram  README.md  docker-compose.yml  instruction.md  package-lock.json  plan.md  pyproject.toml  vaultdb..db
src/backend/: config.py  main.py  transcription.py
src/backend/database/: db.py  models.py
src/backend/llm/: __init__.py  base.py  gemini.py
src/backend/routers/: anki.py  courses.py  files.py  llm.py
src/frontend/: Dockerfile  README.md  eslint.config.mjs  package-lock.json  package.json  tsconfig.tsbuildinfo
src/frontend/app/: globals.css  layout.tsx  page.tsx
src/frontend/components/study-suite/: ai-chat.tsx  anki-flashcards.tsx  command-palette.tsx  course-overview.tsx  course-workspace.tsx  file-explorer.tsx  image-editor.tsx  markdown-editor.tsx  media-player.tsx  pdf-viewer.tsx  summary-diff-editor.tsx  top-navbar.tsx
src/frontend/components/ui/: markdown-content.tsx
src/frontend/contexts/: selected-course-context.tsx
src/frontend/lib/: api.ts  data.ts  file-tree.ts
src/telegram-bot/: README.md  main.py
tests/backend/: conftest.py  test_anki_router.py  test_config.py  test_courses_router.py  test_database.py  test_files_router.py
